servicemesh/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: backend
spec:
  selector:
    app: auth
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: backend
spec:
  selector:
    app: orders
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
  namespace: backend
spec:
  selector:
    app: payments
  ports:
  - port: 80
