servicemesh/gce.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
spec:
  ingressClassName: gce
  tls:
  - hosts:
    - mesh.example.com
    secretName: tls-secret
  rules:
  - host: mesh.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
